# solar-panels-helper

./: .gitignore  AGENTS.md  README.md  implementation_plan.md  pyproject.toml  start.ps1  start.py
.agents/rules/: 00_antigravity_protocol.md  01_agent_planning.md  02_codebase_onboarding.md  04_context_budget.md  05_performance_evaluation_logging_protocol.md  06_token_consumption_optimization_rules_for_python_and_react.md  10_architect_role.md  20_python_tooling.md  21_security_review.md
.agents/rules/assets/: ai_tools_output_visibility.md
.agents/rules/references/: ai_tools_output_visibility.md
.agents/skills/: index.json
.agents/skills/fastapi-reviewer/: SKILL.md
.agents/skills/react-patterns/: SKILL.md
.agents/skills/react-performance/: SKILL.md
.agents/skills/react-testing/: SKILL.md
.agents/skills/token-efficient.coding-prompt/: SKILL.md
.agents/skills/vulnerability_scanning_&_assessment/: SKILL.md
.agents/skills/web_application_security_testing/: SKILL.md
.agents/skills/webapp-testing/: SKILL.md
docs/: application_overview.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CashFlowChart.tsx  EnergyChart.tsx  Form.tsx  MapPicker.tsx  Results.tsx  TouChart.tsx
src/solarpanels/: client.py  main.py  models.py  solar.py
tests/: test_client.py  test_integration.py  test_live_api.py  test_nrel_api.py  test_pvwatts_comparison.py  test_solar.py
